# rust-synth

./: CRATES_RESEARCH.md  Cargo.toml  DEMO_SUMMARY.md  DESIGN.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration_test.rs
crates/core/: Cargo.toml
crates/core/src/: atoms.rs  errors.rs  instruments.rs  lib.rs  patterns.rs
crates/engine/: Cargo.toml
crates/engine/src/: export.rs  lib.rs  playback.rs  sequencer.rs
crates/lang/: Cargo.toml
crates/lang/src/: ast.rs  grammar.pest  parser.rs
examples/: better_drums.rs  better_drums_fixed.rs  demo.rsynth  prototype1_functional.rs  prototype2_modular.rs  prototype3_graph.rs  simple_beat.rsynth
examples/synthesis/: Cargo.toml
