[workspace]
members = [
    "crates/core",
    "crates/lang", 
    "crates/engine",
    "crates/cli",
    "examples/synthesis"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[workspace.dependencies]
# Audio
fundsp = "0.19"
cpal = "0.15"
hound = "3.5"

# Parsing
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File watching
notify = "6.1"

# Async
tokio = { version = "1.40", features = ["full"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utils
crossbeam = "0.8"
rand = "0.8"